WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105213
REGRESSION(
r136324
): flex items with percent heights not resizing
https://bugs.webkit.org/show_bug.cgi?id=105213
Summary
REGRESSION(r136324): flex items with percent heights not resizing
Tony Chang
Reported
2012-12-17 13:31:45 PST
REGRESSION(
r136324
): flex items with percent heights not resizing
Attachments
Patch
(14.17 KB, patch)
2012-12-17 13:35 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Patch for landing
(14.03 KB, patch)
2012-12-18 09:45 PST
,
Tony Chang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-12-17 13:35:07 PST
Created
attachment 179794
[details]
Patch
Ojan Vafai
Comment 2
2012-12-17 20:49:41 PST
Comment on
attachment 179794
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179794&action=review
Up to you on the naming. Figured I'd at least try to make a suggestion. :)
> Source/WebCore/rendering/RenderBlock.h:531 > + void updateNeedsLayoutAndPreferredLogicalWidthsDirtyBeforeBlockChildLayout(bool relayoutChildren, RenderBox* child);
Ugh. This is so verbose. I can't think of anything more concise though. updateDirtyBitsBeforeBlockChildLayout?
Tony Chang
Comment 3
2012-12-18 09:45:22 PST
Created
attachment 179966
[details]
Patch for landing
Tony Chang
Comment 4
2012-12-18 09:45:55 PST
Comment on
attachment 179794
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=179794&action=review
>> Source/WebCore/rendering/RenderBlock.h:531 >> + void updateNeedsLayoutAndPreferredLogicalWidthsDirtyBeforeBlockChildLayout(bool relayoutChildren, RenderBox* child); > > Ugh. This is so verbose. I can't think of anything more concise though. updateDirtyBitsBeforeBlockChildLayout?
I went with updateBlockChildDirtyBitsBeforeLayout
WebKit Review Bot
Comment 5
2012-12-18 10:24:20 PST
Comment on
attachment 179966
[details]
Patch for landing Clearing flags on attachment: 179966 Committed
r138037
: <
http://trac.webkit.org/changeset/138037
>
WebKit Review Bot
Comment 6
2012-12-18 10:24:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug